kubernetes/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gloudcms-api-deployment
  labels:
    app: gloudcms
    environment: dev
#Controller Spec (ReplicaSet)
spec:
  selector:
    matchLabels:
      app: gloudcms
      tier: backend
  replicas: 3
  template:
    metadata:
      labels:
        app: gloudcms
        tier: backend
    #Pod spec
    spec:
      containers:
      - name: gloudcms-api-container
        image: gcr.io/gloudcms/gloudcms-api:v1.4.1
        ports:
         - containerPort: 8081
