kubernetes/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gloudcms-mongodb-deployment
  labels:
    app: gloudcms
    environment: dev
spec:
  selector:
      matchLabels:
        app: gloudcms
        tier: database
  replicas: 1
  template:
    metadata:
      labels:
        app: gloudcms  
        tier: database
    spec:
      containers:
      - name: mongo
        image: mongo
        command:
          - mongod
#          - "--replSet"
#          - rs0
          - "--bind_ip"
          - 0.0.0.0
        ports:
         - containerPort: 27017
        volumeMounts:
        - mountPath: /data/db
          name: data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: db-storage
