kubernetes/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gloudcms-redis-deployment
  labels:
    app: gloudcms
    environment: dev
spec:
  selector:
      matchLabels:
        app: gloudcms
        tier: memorydatabase
  replicas: 1
  template:
    metadata:
      labels:
        app: gloudcms
        tier: memorydatabase
    spec:
      containers:
      - name: redis
        image: redis
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 6379
