kubernetes/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gloudcms-api
  labels:
    app: gloudcms
spec:
  type: NodePort
  selector:
    app: gloudcms
    tier: backend
  ports:
  - port: 443
    targetPort: 8081
    protocol: TCP
