kubernetes/interface-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/app-protocols: '{"my-port":"HTTP2"}'
  name: gloudcms-interface
  labels:
    app: gloudcms
spec:
  type: NodePort
  selector:
    app: gloudcms
    tier: frontend
  ports:
  - port: 443
    targetPort: 8080
    protocol: TCP
