kubernetes/interface.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    beta.cloud.google.com/backend-config: '{"ports": {"443":"cdn-backendconfig"}}'
  name: gloudcms-interface
  labels:
    app: gloudcms
spec:
  type: NodePort
  selector:
    app: gloudcms
    tier: interface
  ports:
  - port: 443
    targetPort: 8080
    protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gloudcms-interface-deployment
  labels:
    app: gloudcms
    environment: dev
#Controller Spec (ReplicaSet)
spec:
  selector:
      matchLabels:
        app: gloudcms
        tier: interface
  replicas: 3
  template:
    metadata:
      labels:
        app: gloudcms  
        tier: interface
    #Pod spec
    spec:
      containers:
      - name: gloudcms-interface-container
        image: gcr.io/gloudcms-123/gloudcms-interface:v1.1
        ports:
         - containerPort: 8080
