kubernetes/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
 name: gloudcms-mongo
 labels:
   app: gloudcms
spec:
  selector:
    app: gloudcms
    tier: database
  ports:
  - port: 27017
    targetPort: 27017
