kubernetes/redis.yaml
apiVersion: v1
kind: Service
metadata:
 name: redis-master
 labels:
   app: gloudcms
spec:
  selector:
    app: gloudcms
    role: master
    tier: memorydatabase
  ports:
  - port: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gloudcms-redis-master-deployment
  labels:
    app: gloudcms
    environment: dev
spec:
  selector:
      matchLabels:
        app: gloudcms
        role: master
        tier: memorydatabase
  replicas: 1
  template:
    metadata:
      labels:
        app: gloudcms
        role: master
        tier: memorydatabase
    spec:
      containers:
      - name: master
        image: k8s.gcr.io/redis:e2e
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
 name: redis-slave
 labels:
   app: gloudcms
spec:
  selector:
    app: gloudcms
    role: slave
    tier: memorydatabase
  ports:
  - port: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gloudcms-redis-deployment
  labels:
    app: gloudcms
    environment: dev
spec:
  selector:
      matchLabels:
        app: gloudcms
        role: slave
        tier: memorydatabase
  replicas: 2
  template:
    metadata:
      labels:
        app: gloudcms
        role: slave
        tier: memorydatabase
    spec:
      containers:
      - name: slave
        image: gcr.io/google_samples/gb-redisslave:v3
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 6379
