kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gloudcms-ingress
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.global-static-ip-name: gloudcms-ip
    networking.gke.io/managed-certificates: philipbizimis-certificate, wwwphilipbizimis-certificate, apiphilipbizimis-certificate
spec:
  rules:
  - host: www.philipbizimis.com
    http:
      paths:
      - backend:
          serviceName: gloudcms-interface
          servicePort: 443
  - host: api.philipbizimis.com
    http:
      paths:
      - path: /gloudcms/api/v1/*
        backend:
          serviceName: gloudcms-api
          servicePort: 443
  - host: philipbizimis.com
    http:
      paths:
      - backend:
          serviceName: gloudcms-interface
          servicePort: 443
